add "Expedition" and "Crew" entity
